implementação da interface administrativa

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -3,7 +3,7 @@
             <div class="row-fluid">  
               <section>
                   <div class="span12">
-                     <img src="{{=URL('static', '14.png')}}" alt="">                
+                     <img src="{{=response.banner}}" alt="">                
                   </div>  
               </section>
               <section>
