--- a/views/project/redirect_paypal.html
+++ b/views/project/redirect_paypal.html
@@ -11,7 +11,7 @@
                     <h1>{{=T("Redirecting to Paypal page")}}</h1>
                     <hr>                     
                 </div>
-                <div class="span12 well form-project">
+                <div class="span12 well form-project m_left">
                     <form id="paypal_form" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="business" value="{{=paypal_id}}">
                         <input type="image" src="https://www.sandbox.paypal.com/en_US/1/btn_buynowCC_LG.gif" border="0" name="submit" alt="Paypal">
