--- a/views/default/contact.html
+++ b/views/default/contact.html
@@ -6,11 +6,11 @@
                     <h1>{{=T("Contact us")}}</h1>
                     <hr>                     
                 </div>
-                <div class="span12 well form-project">  
+                <div class="span12 well form-project m_left">  
                     <form action="{{=URL()}}" enctype="multipart/form-data" method="post" >
                       <p>
                         <strong>{{=T("Name")}}:</strong><br />
-                        <input type="text" name="name" id="name" placeholder="Informe seu nome!"  class="span4" required/>
+                        <input type="text" name="name" id="name" placeholder="Informe seu nome!" class="span4" required/>
                       </p>
                       <p>
                         <strong>{{=T("Email")}}:</strong><br />
@@ -18,10 +18,10 @@
                       </p>
                       <p>
                         <strong>{{=T("Message")}}:</strong><br />
-                        <textarea name="message" id="message" cols="52" rows="6" class="span8"></textarea>
+                        <textarea name="message" id="message" cols="52" rows="10" class="span6"></textarea>
                       </p>
                       <p>
-                      <button type="submit" name="Submit" class="btn btn-primary btn-large"/>{{=T("Send")}}</button>
+                      <button type="submit" name="Submit" class="btn btn-warning btn-large"/>{{=T("Send")}}</button>
                       </p>
                     </form>
                 </div>
