--- a/views/layoutadmin.html
+++ b/views/layoutadmin.html
@@ -109,7 +109,10 @@
   	</div>
   	<div class="row-fluid">
   		<div class="span6">
-  			<p>&#169; {{=request.now.year}} <a href="http://codeup.com.br" title="CodeUP Apps Studio" target="_blank">CodeUp Apps Studio</a></p>
+  			<p>&#169; {{=request.now.year}} 
+          <a href="http://codeup.com.br" title="CodeUP Apps Studio" target="_blank">CodeUp Apps Studio</a>
+            <a href="http://codeup.com.br" title="CodeUP Apps Studio" target="_blank">{{=T("Google Groups")}}</a>
+        </p>
   		</div>
   	</div>
   </footer>
