--- a/views/project/project_send.html
+++ b/views/project/project_send.html
@@ -82,7 +82,7 @@
             {{=XML(terms_of_use)}}
         </div>
         <div class="modal-footer">
-            <a href="#" data-dismiss="modal"><button class="btn">{{=T("Close")}}</button></a>
+            <a href="#" data-dismiss="modal"><button class="btn btn-warning">{{=T("Close")}}</button></a>
            
         </div>
     </div>
