--- a/views/web2py_ajax.html
+++ b/views/web2py_ajax.html
@@ -21,3 +21,11 @@ $(function(){
 })
 </script>
 
+
+<script type="text/javascript">
+	$(function(){
+		setTimeout(function() {
+    		$('.flash').fadeOut('fast');
+		}, 2000);
+	})
+</script>
