--- a/views/default/contact.html
+++ b/views/default/contact.html
@@ -9,15 +9,19 @@
                 <div class="span12 well form-project m_left">  
                     <form action="{{=URL()}}" enctype="multipart/form-data" method="post" >
                       <p>
-                        <strong>{{=T("Name")}}:</strong><br />
-                        <input type="text" name="name" id="name" placeholder="Informe seu nome!" class="span4" required/>
+                        <label for="name">{{=T("Name")}}:</label>
+                        <input type="text" name="name" id="name" placeholder="{{=T('Type your Name')}}" class="span4" required/>
                       </p>
                       <p>
-                        <strong>{{=T("Email")}}:</strong><br />
-                        <input type="text" name="email" id="email" placeholder="Informe seu E-mail!" class="span4" required/>
+                        <label for="email">{{=T("Email")}}:</label>
+                        <input type="text" name="email" id="email" placeholder="{{=T('Type your email')}}" class="span4" required/>
                       </p>
                       <p>
-                        <strong>{{=T("Message")}}:</strong><br />
+                        <label for="subject">{{=T("Subject")}}:</label>
+                        <input type="text" name="subject" id="subject" placeholder="{{=T('Type the Subject')}}" class="span4" required/>
+                      </p>
+                      <p>
+                        <label for="message">{{=T("Message")}}:</label>
                         <textarea name="message" id="message" cols="52" rows="10" class="span6"></textarea>
                       </p>
                       <p>
