--- a/views/default/contact.html
+++ b/views/default/contact.html
@@ -10,7 +10,7 @@
                     <form action="{{=URL()}}" enctype="multipart/form-data" method="post" >
                       <p>
                         <label for="name">{{=T("Name")}}:</label>
-                        <input type="text" name="name" id="name" placeholder="{{=T('Type your Name')}}" class="span4" required/>
+                        <input type="text" name="name" id="name" placeholder="{{=T('Type your name')}}" class="span4" required/>
                       </p>
                       <p>
                         <label for="email">{{=T("Email")}}:</label>
@@ -18,14 +18,14 @@
                       </p>
                       <p>
                         <label for="subject">{{=T("Subject")}}:</label>
-                        <input type="text" name="subject" id="subject" placeholder="{{=T('Type the Subject')}}" class="span4" required/>
+                        <input type="text" name="subject" id="subject" placeholder="{{=T('Type the subject')}}" class="span4" required/>
                       </p>
                       <p>
                         <label for="message">{{=T("Message")}}:</label>
                         <textarea name="message" id="message" cols="52" rows="10" class="span6"></textarea>
                       </p>
                       <p>
-                      <button type="submit" name="Submit" class="btn btn-warning btn-large"/>{{=T("Send")}}</button>
+                      <button type="submit" name="Submit" class="btn btn-warning"/>{{=T("Send message")}}</button>
                       </p>
                     </form>
                 </div>
