Ajustes de acesso

--- a/views/adminpanel/config_website_images.html
+++ b/views/adminpanel/config_website_images.html
@@ -25,6 +25,11 @@
               {{=form_anonymous}}
             </p>
             <hr>
+            <p>
+              <h2>{{=T("Default Image")}}</h2>
+              {{=form_default}}
+            </p>
+            <hr>            
           </div><!--/row-->
         </div><!--/span-->
       </div><!--/row-->
