Adiciona função para configurar o tempo de captação dos projetos

--- a/views/layoutadmin.html
+++ b/views/layoutadmin.html
@@ -96,7 +96,7 @@
               <li><a href="{{=URL(c='adminpanel', f='list_expired_projects')}}">{{=T("List Expired")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='list_all_projects')}}">{{=T("List All")}}</a></li>
               <li class="nav-header">{{=T("App Settings")}}</li>
-              <li><a href="{{=URL(c='adminpanel', f='config_website_meta')}}">{{=T("Website Meta Info")}}</a></li>
+              <li><a href="{{=URL(c='adminpanel', f='config_website_info')}}">{{=T("Website Info")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_images')}}">{{=T("Website Images")}}</a></li>
             </ul>
           </div><!--/.well -->
