--- a/views/layoutadmin.html
+++ b/views/layoutadmin.html
@@ -98,6 +98,7 @@
               <li class="nav-header">{{=T("App Settings")}}</li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_info')}}">{{=T("Website Info")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_images')}}">{{=T("Website Images")}}</a></li>
+              <li><a href="{{=URL(c='adminpanel', f='config_website_email')}}">{{=T("Email Settings")}}</a></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span--> 
