Adiciona funções de configurações de gateways de pagamento

--- a/views/adminpanel/config_website_payment.html
+++ b/views/adminpanel/config_website_payment.html
@@ -1,8 +1,8 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
           <div class="container-fluid well">
-            <h1>{{=T("Website Meta Info")}}</h1>
-            <p>Put here your site infos (read more at http://dev.w3.org/html5/markup/meta.name.html)</p>
+            <h1>{{=T("Website Payment Settings")}}</h1>
+            <p>Put here your payment settings</p>
           </div>
           <div class="container-fluid well">
             {{=form}}
