--- a/views/layoutadmin.html
+++ b/views/layoutadmin.html
@@ -99,6 +99,7 @@
               <li><a href="{{=URL(c='adminpanel', f='config_website_info')}}">{{=T("Website Info")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_images')}}">{{=T("Website Images")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_email')}}">{{=T("Email Settings")}}</a></li>
+              <li><a href="{{=URL(c='adminpanel', f='config_website_payment')}}">{{=T("Payment Settings")}}</a></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span--> 
