--- a/views/project/redirect_paypal.html
+++ b/views/project/redirect_paypal.html
@@ -12,10 +12,8 @@
                     <hr>                     
                 </div>
                 <div class="span12 well form-project m_left">
-                    <form id="paypal_form" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
+                    <form id="paypal_form" action="{{=paypal_send_url}}" method="post">
                         <input type="hidden" name="business" value="{{=paypal_id}}">
-                        <input type="image" src="https://www.sandbox.paypal.com/en_US/1/btn_buynowCC_LG.gif" border="0" name="submit" alt="Paypal">
-                        <img src="https://www.sandbox.paypal.com/en_US/1/src/pixel.gif" border="0" width="1" height="1" alt="Paypal">
                         <input type="hidden" name="cmd" value="_xclick">
                         <input type="hidden" name="upload" value="1">
                         <input type="hidden" name="charset" value="utf-8">
