--- a/views/adminpanel/config_website_images.html
+++ b/views/adminpanel/config_website_images.html
@@ -6,30 +6,9 @@
           </div>
           <div class="container-fluid well">
             <p>
-              <h2>{{=T("Site Logo")}}</h2>
-              {{=form_logo}}
-            </p>
-            <hr>
-            <p>
-              <h2>{{=T("Home Banner")}}</h2>
-              {{=form_banner}}
-            </p>
-            <hr>
-            <p>
-              <h2>{{=T("Default Avatar")}}</h2>
-              {{=form_avatar}}
-            </p>
-            <hr>
-            <p>
-              <h2>{{=T("Anonymous Avatar")}}</h2>
-              {{=form_anonymous}}
-            </p>
-            <hr>
-            <p>
-              <h2>{{=T("Default Image")}}</h2>
-              {{=form_default}}
-            </p>
-            <hr>            
+              <h2>{{=T("Website Images")}}</h2>
+              {{=form_images}}
+            </p>        
           </div><!--/row-->
         </div><!--/span-->
       </div><!--/row-->
